landing page: fix element overflow

--- a/packages/theme/public/assets/css/loginForms.css
+++ b/packages/theme/public/assets/css/loginForms.css
@@ -293,7 +293,7 @@ background: url("/system/assets/img/bg-feature-01.jpg");
     height: 100%;
     float: left;
     width: 270px;
-    padding-left: 26px;
+    /* padding-left: 26px; */
 }
 .login-form__right .social_wrap {
     width: 235px;
